--- a/vipr-portal/portal/app/views/arrays/StorageSystems/edit.html
+++ b/vipr-portal/portal/app/views/arrays/StorageSystems/edit.html
@@ -252,6 +252,7 @@
      	var selectedType = $('#storageArray_type').val();
         if (selectedType == 'denali') {
             $('#storageArray_deviceTypeControlGroup').show();
+	    $('#storageArray_elementManagerURLControlGroup').hide();
         } else {
             $('#storageArray_deviceTypeControlGroup').hide();
         }
